<resources>
    <!-- Bottom Menu -->
    <string name="tab_overview">Overview</string>
    <string name="tab_health">Health</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_about">About</string>

    <!-- OverView Screen -->
    <string name="overview_title_text">Overview</string>
    <string name="overview_stop_smoking_text">Stopped smoking at:</string>
    <string name="overview_not_smoked_since_text">Not smoked since:</string>
    <string name="overview_not_smoked_since_value">%1$s years\n %2$s months\n %3$s days\n %4$s hours\n %5$s minutes</string>
    <string name="overview_title_saved">Saved:</string>
    <string name="overview_saved_time_minutes">%1$s min</string>
    <string name="overview_saved_time_hours">%1$s h</string>

    <!-- About Screen -->
    <string name="about_title_text">About</string>
    <string name="about_mission_title">Our Mission</string>
    <string name="about_mission_description">This app was created to help people quit smoking by tracking their health recovery progress, visualizing savings, and offering motivation to stay smoke-free.</string>

    <string name="about_disclaimer_title">Disclaimer</string>
    <string name="about_disclaimer_description">This app is not a substitute for professional medical advice, diagnosis, or treatment. Please consult your doctor before making decisions related to your health.</string>

    <string name="about_developer_title">Developer</string>
    <string name="about_developer_description">Created with ❤️ by Ruben Miguel Corcoba.</string>

    <string name="about_contact_title">Contact</string>
    <string name="about_contact_description">For feedback or support, reach out to:</string>

    <string name="about_project_title">Project Website</string>
    <string name="about_project_link_text">Visit our website</string>

    <string name="about_original_title">Original Project</string>
    <string name="about_original_description">This app is inspired and based on work from the open-source project created by scoute-dich.</string>
    <string name="about_original_link_text">View original archived GitHub project</string>

    <string name="about_license_title">License</string>
    <string name="about_license_description">This app is licensed under the GNU General Public License v3.0 (GPL-3.0). You are free to use, modify, and distribute it under the terms of this license.</string>
    <string name="about_license_link_text">Full license text</string>

    <string name="about_donation">Donation</string>
    <string name="about_donation_link_text">Donate</string>
    <string name="about_donation_description">QuitSmoking is maintained by a single developer. Your donation helps cover development costs and ensures continued updates and improvements.</string>


    <string name="about_version_text">Version %1$s</string>

    <!-- Settings Screen -->
    <string name="settings_title_text">Settings</string>

    <string name="settings_date_title">Date</string>
    <string name="settings_date_description">When did you stop smoking? Please enter date.</string>
    <string name="settings_time_title">Time</string>
    <string name="settings_time_description">When did you stop smoking? Please enter time.</string>
    <string name="settings_smoke_title">Smoke habits</string>
    <string name="settings_smoke_description">Enter the number of smoked cigarettes per day and the time it took to smoke one cigarette.</string>
    <string name="settings_costs_title">Costs</string>
    <string name="settings_costs_description">Costs of a single cigarette. This is used to calculate the saved money since quitting.</string>
    <string name="settings_error_saving_costs">Error saving costs</string>
    <string name="settings_error_saving_cigarettes">Error saving number of cigarettes</string>
    <string name="settings_error_saving_time">Error saving time</string>
    <string name="settings_error_saving_date">Error saving date</string>
    <string name="settings_first_run_banner">To start using the app, please add your quit date, time, smoke habits, and costs.</string>

    <!-- Health Screen -->
    <string name="health_title_text">Health</string>

    <string name="health_goal_achieved">Congratulations - you did it! (%1$s%)</string>
    <string name="health_goal_in_progress">In progress (%1$s%)</string>

    <string name="health_blood_pressure_title">Blood pressure</string>
    <string name="health_blood_pressure_description">Blood pressure, body temperature and heart rate return to normal. (20 minutes)</string>

    <string name="health_carbon_monoxide_title">Carbon monoxide</string>
    <string name="health_carbon_monoxide_description">The smoker breath disappears. The poisonous gas carbon monoxide blocks for a smoker about 10% of the red blood cells. These cells are now available again for oxygen. (8 hours)</string>

    <string name="health_heart_attack_title">Heart attack</string>
    <string name="health_heart_attack_description">The risk of sudden cardiac death decreases. (1 day)</string>

    <string name="health_sense_of_smell_title">Sense of smell</string>
    <string name="health_sense_of_smell_description">The sense of smell and the taste buds becoming more sensitive; smelling and taste is refined. (2 days)</string>

    <string name="health_breathing_title">Breathing</string>
    <string name="health_breathing_description">Breathing becomes easier. (3 days)</string>

    <string name="health_nicotine_withdrawal_title">Nicotine withdrawal</string>
    <string name="health_nicotine_withdrawal_description">The physical nicotine withdrawal is made. (1 week)</string>

    <string name="health_capacity_title">Capacity</string>
    <string name="health_capacity_description">The entire blood circulation improves. The increased lung capacity by up to 30 , they can absorb more oxygen again. This increases the physical Performance. (3 months)</string>

    <string name="health_lung_hairs_title">Lung hairs</string>
    <string name="health_lung_hairs_description">By now, the fine hairs are regrow in the lungs, the smokers cough disappears. Exhaustion and shortness of breath improve progressively. (9 months)</string>

    <string name="health_coronary_arteries_title">Coronary arteries</string>
    <string name="health_coronary_arteries_description">The risk of diseases of the coronary vessels is reduced by half. (1 year)</string>

    <string name="health_heart_attack_2y_title">Heart attack</string>
    <string name="health_heart_attack_2y_description">The risk of heart attack drops significantly. (2 years)</string>

    <string name="health_stroke_title">Stroke</string>
    <string name="health_stroke_description">The risk of having a stroke or a lung cancer die, is substantially lower than earlier. Also the risk of cancers of the mouth is reduced. (5 years)</string>

    <string name="health_lung_cancer_title">Lung cancer</string>
    <string name="health_lung_cancer_description">The lung cancer risk is as high as a Non smoking. The lung has almost fully recovered, pre-cancerous cells are replaced by healthy cells. (10 years)</string>

    <string name="health_heart_attack_15y_title">Heart attack</string>
    <string name="health_heart_attack_15y_description">The risk of heart attack is barely higher than in a Non smoking. (15 years)</string>

    <!-- Costs Input Dialog -->
    <string name="costs_dialog_title_text">Costs</string>
    <string name="costs_dialog_label_text">Cigarette Cost</string>
    <string name="costs_dialog_error_text">Please enter a number grater than 0</string>

    <!-- Smoking Habits Input Dialog -->
    <string name="smoking_habits_dialog_title_text">Smoking Habits</string>
    <string name="smoking_habits_dialog_cigarette_label_text">Cigarettes per day</string>
    <string name="smoking_habits_dialog_minutes_label_text">Minutes per cigarette</string>
    <string name="smoking_habits_dialog_error_text">Please enter numbers grater than 0</string>

    <!-- Time Picker -->
    <string name="time_picker_title_text">Select a Time</string>

    <!-- Common -->
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_save">Save</string>
</resources>